# plic

./: Cargo.toml  README.md  doc.md  install.sh  install_debug.sh
exmpl/: advanced.plic  basic.plic  chat.plic  collections.plic  concurrency.plic  control.plic
hl/vim/ftdetect/: plic.vim  plic_header.vim
hl/vim/syntax/: plic.vim
hl/vsc/: plic.tmLanguage.json
src/: ast.rs  builtins.rs  chat.rs  error.rs  eval.rs  lexer.rs  lib.rs  main.rs  p2p.rs  parser.rs  server.rs  types.rs
src/tests/: integration.rs
