[package]
name = "plic"
version = "3.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
chrono = "0.4"
once_cell = "1.19"
native-tls = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustyline = "10.0"
hex = "0.4"
sha2 = "0.10"
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"
rand = "0.8"
rcgen = "0.10"
anyhow = "1.0"
thiserror = "1.0"
aes-gcm = "0.10"
codespan = "0.11"
codespan-reporting = "0.11"
ctrlc = "3.4"

[[bin]]
name = "plic"
path = "src/main.rs"
